--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,10 @@
     "react/prop-types": 0,
     "linebreak-style": "off",
     "max-len": "off",
-    "react/jsx-no-bind": 0
+    // "react/jsx-no-bind": 0,
+    "jsx-a11y/label-has-for": "off",
+    "arrow-body-style": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   },
   "env": {
     "browser": true
