--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-modal-dialog": "^4.0.7",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "uuid": "^3.1.0"
   },
   "importSort": {
     ".js, .jsx, .es6, .es, .css": {
