--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --history-api-fallback --progress --colors --port 3000",
+    "start": "webpack-dev-server --history-api-fallback --progress --colors --port 3000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ktei2008@gmail.com",
